2010-01-02  Thomas Adam   <thomas.adam22@gmail.com>
	* fvwm-convert-2.6.in:
	* fvwm-convert-2.6.1.in:
	Handle continuation lines.

	Process those lines ending in a backslash by prepending them to the
	previous line and just shunting it to a common function.  When writing
	out the file, ensure we preserve the split lines.

2010-01-01  Thomas Adam   <thomas.adam22@gmail.com>
	* fvwm-convert-2.6.in:
	Use !UsePPosition over NoPPosition when negating style lines..

	When converting styles over, use !UsePPosition, and not convert to
	!PPosition -- which would have happened due to how the negation for
	style command works for other styles.
2010-01-01  Thomas Adam   <thomas.adam22@gmail.com>
	* fvwm-convert-2.6.in:
	Retain "Read foo" lines when calling handle_read_file()

	Ensure we retain this line when spitting out the converted file,
	otherwise the file from Read will never get processed by FVWM.

2010-01-01  Thomas Adam   <thomas.adam22@gmail.com>
	* fvwm-convert-2.6.in:
	* fvwm-convert-2.6.1.in:
	Convert over to use GetOpt::Long and introduce -f and -h.

	--follow-read|-f : Follow files found via "Read".
	--help|-h : Print help message.

	No longer allow fvwm-convert-2.6 to follow Read files automatically --
	force this via -f instead.

	In the case of -f not given, still print out files found on the command
	line to make the user aware there's additional files that will need
	processing.

2010-01-01  Thomas Adam   <thomas.adam22@gmail.com>
	* fvwm-convert-2.6.in:
	Fix command-line parsing, and allow for destination file to be honoured
	-- stupid logic bug on my part.

2009-03-22  Mikhael Goikhman  <migo@homemail.com>

	* Makefile.am:
	add fvwm version to automatically generated man pages

	* fvwm-menu-directory.1:
	* fvwm-menu-headlines.1:
	* fvwm-menu-xlock.1:
	* fvwm-perllib.1:
	regenerated

2009-03-17  Mikhael Goikhman  <migo@homemail.com>

	* fvwm-menu-desktop.in:
	* fvwm-menu-directory.in:
	* fvwm-menu-headlines.in:
	* fvwm-menu-xlock.in:
	* fvwm-perllib.in: